--- a/css/common.css
+++ b/css/common.css
@@ -26,8 +26,13 @@ a:hover {
 	box-shadow: 0 0 0 0.25rem rgb(224 130 195 / 25%);
 }
 
+.nav-link,
 .navbar-background-color {
 	background-color: #7D3271;
+}
+
+.nav-link {
+	border: 0px;
 }
 
 .navbar-dark:hover .navbar-nav:hover .nav-link:hover {
